--- a/_posts/2025-02-13-一文看懂Git.md
+++ b/_posts/2025-02-13-一文看懂Git.md
@@ -202,6 +202,7 @@ git stash clear           # 删除所有stash
 git reset --soft <commit id> # 保留工作目录和暂存区的更改
 git reset --mixed <commit id> # 保留工作目录的更改，删除暂存区的更改（默认模式）
 git reset --hard <commit id> # 删除工作目录和暂存区的更改
+git clean # remove untracked changes
 
 # 在使用`--hard`前先创建备份分支
 git branch backup-branch
